# BlackICE

./: .gitignore  README.md
PoC/: README.md  pyproject.toml
PoC/blackice_poc/: hard_reset.sh
PoC/blackice_poc/commands/: default_cmdsets.py
PoC/blackice_poc/commands/blackice_commands/cmdsets/connection/: ghost.py  unloggedin.py
PoC/blackice_poc/commands/blackice_commands/connection/: cmd_ghost.py  cmd_login.py  cmd_register.py
PoC/blackice_poc/server/conf/: connection_screens.py  settings.py
PoC/blackice_poc/typeclasses/: accounts.py  channels.py  exits.py  objects.py  rooms.py  scripts.py
PoC/blackice_poc/typeclasses/blackice_typeclasses/: ghost_account.py  ghost_chamber.py  ghost_persona.py  persona.py
PoC/blackice_poc/world/blackice_world/: cyberdeck_login_prompt.py
docs/: core_rulebook.md  description.md  roadmap.md
docs/annex/: cyberspace_actions.md  hardware_crafting.md  persona_cyberdeck.md  programs_logic.md  progran_crafting.md
docs/archived/annexes/: access_roles.md  hack_scenario.md  node_structure.md
docs/archived/game_design_documents/: network_social.md
docs/archived/rulebooks/: combat_encounters.md  compile_build_minigame.md  factions_events.md  hack_pvp.md  hardware_crafting.md  minigames.md  stealth_social.md
docs/game_design_documents/: compile_build_minigame.md  economy_tech.md  gameplay.md  pvp_ice_prog.md
docs/rulebooks/: core.md  crafting.md  ice_prog.md  nodes_loot.md  program_crafting.md  programs_gear.md
